--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,109 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial,
+  Helvetica,
+  sans-serif;
+  }
+
+  html {
+    font-size: 62.5%;
+  }
+
+  .Dashboard {
+    width: 100%;
+    height: 100vh;
+    background: tomato;
+    padding: 10rem;
+  }
+
+  p {
+    font-size: 1.8rem;
+    color: white;
+  }
+
+  .Login {
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    background: linear-gradient(-45deg, #EE7752, #e73c7e, #23a6D5, #23d5ab);
+    background-size: 400% 400%;
+    animation: bgChange 10s ease-in-out infinite;
+  }
+
+  @keyframes bgChange {
+    0% {
+      background-position: 0% 50%
+    }
+
+    50% {
+      background-position: 100% 50%
+    }
+
+    100% {
+      background-position: 0% 50%
+    }
+  }
+
+  .Login>form {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 40%;
+    background-color: transparent;
+    padding: 2rem;
+    border: .3rem solid white;
+    border-radius: .4rem;
+
+  }
+
+  .form-group {
+
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    margin: 5rem 0rem;
+  }
+
+  .form-group input {
+    height: 5rem;
+    padding: 1rem;
+    outline: none;
+    border: none;
+    border-bottom: .2rem solid white;
+    font-size: 1.8rem;
+    background-color: transparent;
+  }
+
+  .form-group label {
+    position: absolute;
+    top: 1rem;
+    left: 0rem;
+    font-size: 2rem;
+    transition: 0.3s;
+  }
+
+  .form-group input:focus~label,
+  .form-group input:valid~label {
+    top: -3rem;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.btn {
+  padding: 1rem 3rem;
+  margin: 2rem 0;
+  text-align: center;
+  outline: none;
+  border: none;
+  color: white;
+  font-size: 2rem;
+  font-weight: 500;
+  background-color: rgba(0, 255, 21, 0.775);
+  ;
+}
+
+.btn:hover {
+  cursor: pointer;
+  background-color: rgba(0, 255, 21, 0.905);
 }
